--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Assignment 1 - Chihhsiang Li</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   
   <body>
